src/snapshots/ghis__tui__tests__snapshot_authentication_failure.snap
---
source: src/tui.rs
expression: snapshot_text(&state)
---
┌ ghis 身份 · 当前视图：状态 ──────────────────────────────────────────────────────────────────────┐
│仓库 /home/alice/src/ghis                                                                         │
│身份 personal  提交 Alice <alice@users.noreply.github.com>                                        │
│GitHub github.com / alice  传输 HTTPS  签名 未启用                                                │
│警告：personal 的 GitHub 凭据不可用；不会回退到其他账号                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ 状态 ──────────────────────────────────────────────────┐┌ 预览 ──────────────────────────────────┐
│› GitHub 账号：github.com / alice                       ││当前操作                                │
│  认证状态：失败                                        ││身份配置：personal                      │
│                                                        ││提交身份：Alice                         │
│                                                        ││<alice@users.noreply.github.com>        │
│                                                        ││GitHub 账号：github.com / alice         │
│                                                        ││传输方式：HTTPS                         │
│                                                        ││提交签名：未启用                        │
│                                                        ││写操作未执行                            │
│                                                        ││请运行 gh auth login 修复账号           │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
└────────────────────────────────────────────────────────┘└────────────────────────────────────────┘
┌ 普通模式 ────────────────────────────────────────────────────────────────────────────────────────┐
│认证失败，已停止操作  |  h/l 视图  j/k 选择  / 搜索  b 绑定  U 解绑  r 刷新  ? 帮助  q 退出       │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
