src/snapshots/ghis__tui__tests__snapshot_diagnostics_repair_footer.snap
---
source: src/tui.rs
assertion_line: 1046
expression: snapshot_text(&state)
---
┌ ghis 身份 · 当前视图：诊断 ──────────────────────────────────────────────────────────────────────┐
│仓库 /home/alice/src/ghis                                                                         │
│身份 personal  提交 Alice <alice@users.noreply.github.com>                                        │
│GitHub github.com / alice  传输 HTTPS  签名 未启用                                                │
│状态：正常                                                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ 诊断 ──────────────────────────────────────────────────┐┌ 预览 ──────────────────────────────────┐
│› 自动  同步 ghis 管理配置  ghis sync                   ││当前操作                                │
│  手动  检查全局 Git 配置  git config --show-origin --li││身份配置：personal                      │
│                                                        ││提交身份：Alice                         │
│                                                        ││<alice@users.noreply.github.com>        │
│                                                        ││GitHub 账号：github.com / alice         │
│                                                        ││传输方式：HTTPS                         │
│                                                        ││提交签名：未启用                        │
│                                                        ││解析来源：仓库绑定                      │
│                                                        ││凭据状态：可用                          │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
└────────────────────────────────────────────────────────┘└────────────────────────────────────────┘
┌ 普通模式 ────────────────────────────────────────────────────────────────────────────────────────┐
│选择诊断后按 f 修复；F 仅运行安全自动修复  |  h/l 视图  j/k 选择  / 搜索  b 绑定  U 解绑  f 修复  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
