src/snapshots/ghis__tui__tests__snapshot_missing_one_password.snap
---
source: src/tui.rs
expression: snapshot_text(&state)
---
┌ ghis 身份 · 当前视图：状态 ──────────────────────────────────────────────────────────────────────┐
│仓库 /home/alice/src/ghis                                                                         │
│身份 personal  提交 Alice <alice@users.noreply.github.com>                                        │
│GitHub github.com / alice  传输 SSH（纳管）  签名 SSH（1Password）                                │
│警告：未找到已配置的 1Password Agent socket                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ 状态 ──────────────────────────────────────────────────┐┌ 预览 ──────────────────────────────────┐
│› SSH 密钥：personal                                    ││当前操作                                │
│  Agent：不可用                                         ││身份配置：personal                      │
│                                                        ││提交身份：Alice                         │
│                                                        ││<alice@users.noreply.github.com>        │
│                                                        ││GitHub 账号：github.com / alice         │
│                                                        ││传输方式：SSH（纳管）                   │
│                                                        ││提交签名：SSH（1Password）              │
│                                                        ││SSH push 与签名操作已停止               │
│                                                        ││不会尝试其他 SSH 身份                   │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
└────────────────────────────────────────────────────────┘└────────────────────────────────────────┘
┌ 普通模式 ────────────────────────────────────────────────────────────────────────────────────────┐
│1Password SSH Agent 不可用  |  h/l 视图  j/k 选择  / 搜索  b 绑定  U 解绑  r 刷新  ? 帮助  q 退出 │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
