src/snapshots/ghis__tui__tests__snapshot_normal_state.snap
---
source: src/tui.rs
expression: snapshot_text(&bound_state())
---
┌ ghis 身份 · 当前视图：状态 ──────────────────────────────────────────────────────────────────────┐
│仓库 /home/alice/src/ghis                                                                         │
│身份 personal  提交 Alice <alice@users.noreply.github.com>                                        │
│GitHub github.com / alice  传输 HTTPS  签名 未启用                                                │
│状态：正常                                                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ 状态 ──────────────────────────────────────────────────┐┌ 预览 ──────────────────────────────────┐
│› 仓库已绑定：personal                                  ││当前操作                                │
│  提交身份与 profile 一致                               ││身份配置：personal                      │
│  HTTPS 凭据由 ghis 按账号提供                          ││提交身份：Alice                         │
│                                                        ││<alice@users.noreply.github.com>        │
│                                                        ││GitHub 账号：github.com / alice         │
│                                                        ││传输方式：HTTPS                         │
│                                                        ││提交签名：未启用                        │
│                                                        ││解析来源：仓库绑定                      │
│                                                        ││凭据状态：可用                          │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
└────────────────────────────────────────────────────────┘└────────────────────────────────────────┘
┌ 普通模式 ────────────────────────────────────────────────────────────────────────────────────────┐
│身份已就绪  |  h/l 视图  j/k 选择  / 搜索  b 绑定  U 解绑  r 刷新  ? 帮助  q 退出                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
