src/snapshots/ghis__tui__tests__snapshot_search_and_confirm_modes.snap
---
source: src/tui.rs
expression: "format!(\"=== 搜索模式 ===\\n{}\\n\\n=== 确认模式 ===\\n{}\",\nsnapshot_text(&search), snapshot_text(&confirm))"
---
=== 搜索模式 ===
┌ ghis 身份 · 当前视图：身份 ──────────────────────────────────────────────────────────────────────┐
│仓库 /home/alice/src/ghis                                                                         │
│身份 personal  提交 Alice <alice@users.noreply.github.com>                                        │
│GitHub github.com / alice  传输 HTTPS  签名 未启用                                                │
│状态：正常                                                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ 身份 ──────────────────────────────────────────────────┐┌ 预览 ──────────────────────────────────┐
│› work · github.example.com/alice                       ││当前操作                                │
│                                                        ││身份配置：personal                      │
│                                                        ││提交身份：Alice                         │
│                                                        ││<alice@users.noreply.github.com>        │
│                                                        ││GitHub 账号：github.com / alice         │
│                                                        ││传输方式：HTTPS                         │
│                                                        ││提交签名：未启用                        │
│                                                        ││解析来源：仓库绑定                      │
│                                                        ││凭据状态：可用                          │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
└────────────────────────────────────────────────────────┘└────────────────────────────────────────┘
┌ 搜索 ────────────────────────────────────────────────────────────────────────────────────────────┐
│搜索: work                                                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘

=== 确认模式 ===
┌ ghis 身份 · 当前视图：状态 ──────────────────────────────────────────────────────────────────────┐
│仓库 /home/alice/src/ghis                                                                         │
│身份 personal  提交 Alice <alice@users.noreply.github.com>                                        │
│GitHub github.com / alice  传输 HTTPS  签名 未启用                                                │
│状态：正常                                                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ 状态 ──────────────────────────────────────────────────┐┌ 预览 ──────────────────────────────────┐
│› 仓库已绑定：personal                                  ││当前操作                                │
│  提交身份与 profile 一致                               ││身份配置：personal                      │
│  HTTPS 凭据由 ghis 按账号提供                          ││提交身份：Alice                         │
│                                                        ││<alice@users.noreply.github.com>        │
│                                                        ││GitHub 账号：github.com / alice         │
│                                                        ││传输方式：HTTPS                         │
│                                                        ││提交签名：未启用                        │
│                                                        ││即将移除仓库本地绑定                    │
│                                                        ││profile 配置不会删除                    │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
└────────────────────────────────────────────────────────┘└────────────────────────────────────────┘
┌ 确认 ────────────────────────────────────────────────────────────────────────────────────────────┐
│确认此操作？解绑仓库 /home/alice/src/ghis 与 personal                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
