src/snapshots/ghis__tui__tests__snapshot_signing_error.snap
---
source: src/tui.rs
expression: snapshot_text(&state)
---
┌ ghis 身份 · 当前视图：状态 ──────────────────────────────────────────────────────────────────────┐
│仓库 /home/alice/src/ghis                                                                         │
│身份 personal  提交 Alice <alice@users.noreply.github.com>                                        │
│GitHub github.com / alice  传输 HTTPS  签名 SSH（错误）                                           │
│警告：op-ssh-sign 不可执行；commit 已停止                                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ 状态 ──────────────────────────────────────────────────┐┌ 预览 ──────────────────────────────────┐
│› 签名：已启用                                          ││当前操作                                │
│  签名程序：不可用                                      ││身份配置：personal                      │
│                                                        ││提交身份：Alice                         │
│                                                        ││<alice@users.noreply.github.com>        │
│                                                        ││GitHub 账号：github.com / alice         │
│                                                        ││传输方式：HTTPS                         │
│                                                        ││提交签名：SSH（错误）                   │
│                                                        ││未创建 commit                           │
│                                                        ││请检查 profile 的 signing.program       │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
└────────────────────────────────────────────────────────┘└────────────────────────────────────────┘
┌ 普通模式 ────────────────────────────────────────────────────────────────────────────────────────┐
│提交签名检查失败  |  h/l 视图  j/k 选择  / 搜索  b 绑定  U 解绑  r 刷新  ? 帮助  q 退出           │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
