src/snapshots/ghis__tui__tests__snapshot_unbound_state.snap
---
source: src/tui.rs
expression: snapshot_text(&state)
---
┌ ghis 身份 · 当前视图：状态 ──────────────────────────────────────────────────────────────────────┐
│仓库 /home/alice/src/unresolved                                                                   │
│身份 未绑定  提交 System User <system@example.test>                                               │
│GitHub 未解析  传输 HTTPS  签名 由现有 Git 配置决定                                               │
│警告：没有规则能唯一确定身份                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ 状态 ──────────────────────────────────────────────────┐┌ 预览 ──────────────────────────────────┐
│› 仓库尚未绑定 ghis profile                             ││当前操作                                │
│  未匹配到唯一身份规则                                  ││身份配置：未绑定                        │
│                                                        ││提交身份：System User                   │
│                                                        ││<system@example.test>                   │
│                                                        ││GitHub 账号：未解析                     │
│                                                        ││传输方式：HTTPS                         │
│                                                        ││提交签名：由现有 Git 配置决定           │
│                                                        ││敏感操作前会再次显示警告                │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
└────────────────────────────────────────────────────────┘└────────────────────────────────────────┘
┌ 普通模式 ────────────────────────────────────────────────────────────────────────────────────────┐
│未绑定，将保持现有 Git 行为  |  h/l 视图  j/k 选择  / 搜索  b 绑定  U 解绑  r 刷新  ? 帮助  q 退出│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
